// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderWidth renders 0 1`] = `
Array [
  .c0 {
  border-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders function 1`] = `
Array [
  .c0 {
  border-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders negative number 1`] = `
Array [
  .c0 {
  border-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-width: July;
  }
}

@media April {
  .c0 {
    border-width: August;
  }
}

@media January {
  .c0 {
    border-width: September;
  }
}

@media April {
  .c0 {
    border-width: November;
  }
}

@media June {
  .c0 {
    border-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-width: July;
  }
}

@media April {
  .c0 {
    border-width: August;
  }
}

@media January {
  .c0 {
    border-width: September;
  }
}

@media April {
  .c0 {
    border-width: November;
  }
}

@media June {
  .c0 {
    border-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-width: January;
  }
}

@media April {
  .c0 {
    border-width: December;
  }
}

@media January {
  .c0 {
    border-width: April;
  }
}

@media April {
  .c0 {
    border-width: May;
  }
}

@media June {
  .c0 {
    border-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-width: January;
  }
}

@media April {
  .c0 {
    border-width: December;
  }
}

@media January {
  .c0 {
    border-width: April;
  }
}

@media April {
  .c0 {
    border-width: May;
  }
}

@media June {
  .c0 {
    border-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders string 1`] = `
Array [
  .c0 {
  border-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
